# BGFX-ShaderCompiler

./: .gitignore  CMakeLists.txt  vcpkg.json
src/: example.cpp  main.cpp  shader_processor.h
